[-] CSS: Fix blockcontact margin in navbar collapsed view

--- a/themes/community-theme-16/sass/modules/blockcontact/blockcontact.scss
+++ b/themes/community-theme-16/sass/modules/blockcontact/blockcontact.scss
@@ -2,6 +2,13 @@
 @import "./../../theme_variables";
 @import "./../../vendor_variables";
 
+#blockcontact-phone {
+  .navbar-text {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+}
+
 #contact_block {
   @media (max-width: $screen-xs-max) { // max 767px
     margin-bottom: 20px;
